# GitHub-Action_Workflow-Template-Python

./: .coveragerc  .gitcommitrules  .gitignore  README.md  codecov.yml  pyproject.toml  pytest.ini  sample_Dockerfile  setup.py  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-notes.md  release-title.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/tag_and_release/: release-notes.md  release-title.md
.github/workflows/: build_git-tag_and_create_github-release.yaml  ci-cd.yaml  organize_all_testing_coverage_reports_with_different_os_and_py_version.yaml  organize_all_testing_reports_with_different_test_type.yaml  organize_and_generate_test_cov_reports.yaml  organize_and_generate_testing_coverage_reports.yaml  organize_and_generate_testing_report.yaml  organize_and_generate_testing_reports.yaml  poetry_run_test_via_pytest.yaml  pre-building_test.yaml  prepare_test_items.yaml  push_pkg_to_pypi.yaml  run_test_items_via_pytest.yaml  rw_build_git-tag_and_create_github-release.yaml  rw_get_tests.yaml  rw_organize_test_cov_reports.yaml  rw_poetry_run_test.yaml  rw_poetry_run_test_with_multi_py_versions.yaml  rw_pre-building_test.yaml  rw_push_pypi.yaml  rw_run_test.yaml  rw_run_test_with_multi_py_version.yaml  rw_run_test_with_multi_py_versions.yaml  rw_sonarqube_scan.yaml  rw_upload_test_cov_report.yaml  sonarqube_scan.yaml  test-reusable-workflows.yaml  test-reusable-workflows_one-test.yaml  (+9 more)
requirements/: requirements-test.txt  requirements.txt
test/: __init__.py
test_gh_workflow/: __pkg_info__.py  sample.py
(+16 files in other folders)
