[tool.poetry]
name = "test github action workflow"
version = "0.2.0"
description = "This is a testing package of GitHub Action reusable workflow"
authors = ["Chisanan232 <chi10211201@cycu.org.tw>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
