[tool.poetry]
name = "test_github_action_workflow"
version = "0.2.0"
description = "This is a testing package of GitHub Action reusable workflow"
authors = ["Chisanan232 <chi10211201@cycu.org.tw>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "test_gh_workflow"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pytest-rerunfailures = "^10.2"
coverage = "^6.2"
coveralls = "^3.3.1"

[tool.poetry.group.github-action]
optional = true

[tool.poetry.group.github-action.dependencies]
Flask = "^2.2.3"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
